create set up grid

--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
   <title>Tetris</title>
 </head>
 <body>
-  <div class='grid'></div>
+  <div class="main-wrapper">
+    <div class="left-wrapper">
+      <button id="start-btn">Start</button>
+      <button id="pause-btn">Pause</button>
+    </div>
+    <div class='grid'></div>
+    <div class="right-wrapper"></div>
+  </div>
 
-  
 </body>
 </html>
