--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 <body>
   <div class="main-wrapper">
     <div class="left-wrapper">
-      <button id="start-btn">Start</button>
-      <button id="pause-btn">Pause</button>
     </div>
-    <div class='grid'></div>
+    <div class="center-wrapper">
+      <div class='grid'></div>
+      <div class="button-wrapper">
+        <button id="start-btn">Start</button>
+        <button id="pause-btn">Pause</button>
+        <button id="end-game-btn">End Game</button>
+      </div>
+      
+    </div> 
     <div class="right-wrapper"></div>
   </div>
 
