working on styling the game

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       </div>
       
     </div> 
-    <div class="right-wrapper"></div>
+    <div class="right-wrapper">
+      <div class="next-shapes"></div>
+    </div>
   </div>
 
 </body>
