added loading animation to the grid

--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 <body>
   <div class="main-wrapper">
     <div class="left-wrapper">
+
     </div>
     <div class="center-wrapper">
       <div class='grid'></div>
-      <div class="button-wrapper">
-        <button id="start-btn">Start</button>
+      <div class="controls-wrapper">
+        <!-- <button id="start-btn">Start</button>
         <button id="pause-btn">Pause</button>
-        <button id="end-game-btn">End Game</button>
+        <button id="end-game-btn">End Game</button> -->
       </div>
       
     </div> 
     <div class="right-wrapper">
-      <div class="next-shapes"></div>
+      <div id="next-shapes-overlay">
+        <div class="next-shapes"></div>
+      </div>
+      
     </div>
   </div>
 
