--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
     <div class="main-wrapper">
       <div class="left-wrapper">
-  
+        <div class="highscore-wrapper"></div>
       </div>
       <div class="center-wrapper">
         <div class="grid-text-overlay"></div>
