added game controls section on the left

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <div class="main-wrapper">
       <div class="left-wrapper">
         <div class="highscore-wrapper"></div>
+        <div class="controls-wrapper"></div>
       </div>
       <div class="center-wrapper">
         <div class="grid-text-overlay"></div>
         <div class='grid'></div>
-        <div class="controls-wrapper"></div>
+        <div class="buttons-wrapper"></div>
         </div> 
       <div class="right-wrapper">
         <div class="next-shapes-wrapper">
