adding additonal features

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           </div>
         </div>
         <div class="scoreboard-wrapper"></div>
+        <div class="level-wrapper"></div>
       </div>
     </div>
   </main>
