sounds added to game

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <div class="center-wrapper">
         <div class="grid-text-overlay"></div>
         <div class='grid'></div>
+        <audio src="./sounds/countdown.wav" id="countdown-sound"></audio>
+        <audio src="./sounds/clear.wav" id="break-line-sound"></audio>
         <div class="buttons-wrapper"></div>
         </div> 
       <div class="right-wrapper">
